Refresh project (#51)