@@ -14,7 +14,6 @@
  * limitations under the License.
  */
 import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
-import org.gradle.internal.jvm.Jvm
 
 plugins {
   id 'application'
@@ -34,17 +33,34 @@ jar {
     )
   }
   from {
-    configurations.compileClasspath.filter { it.exists() }.collect { it.isDirectory() ? it : zipTree(it) }
+    configurations.compileClasspath.filter { it.exists() }
+        .collect { it.isDirectory() ? it : zipTree(it) }
   }
+  duplicatesStrategy DuplicatesStrategy.EXCLUDE
 }
 
-tasks.withType(KotlinCompile) {
+tasks.withType(KotlinCompile).configureEach {
   kotlinOptions {
     freeCompilerArgs += [
         "-progressive",
         "-Xopt-in=kotlin.ExperimentalStdlibApi"
     ]
   }
+}
+
+tasks.withType(Test).configureEach {
+  jvmArgs(
+      "--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
+      "--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
+      "--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
+      "--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
+      "--add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED",
+      "--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
+      "--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
+      "--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
+      "--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
+      "--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED"
+  )
 }
 
 dependencies {
@@ -58,7 +74,4 @@ dependencies {
   testImplementation deps.test.truth
   testImplementation deps.test.compileTesting
   testImplementation deps.test.kotlinCompileTesting
-  if (JavaVersion.current() < JavaVersion.VERSION_1_9) {
-    testImplementation files(Jvm.current().getToolsJar())
-  }
 }
